--- a/.roadhogrc
+++ b/.roadhogrc
@@ -1,10 +1,18 @@
 {
   "entry": "src/index.js",
+  "proxy": {
+        "/api": {
+          "target": "http://jsonplaceholder.typicode.com/",
+          "changeOrigin": true,
+          "pathRewrite": { "^/api" : "" }
+        }
+    },
   "env": {
     "development": {
       "extraBabelPlugins": [
         "dva-hmr",
-        "transform-runtime"
+        "transform-runtime",
+        ["import", { "libraryName": "antd", "style": "css" }]
       ]
     },
     "production": {
