--- a/.roadhogrc
+++ b/.roadhogrc
@@ -1,24 +1,29 @@
 {
   "entry": "src/index.js",
   "proxy": {
-        "/api": {
-          "target": "http://jsonplaceholder.typicode.com/",
-          "changeOrigin": true,
-          "pathRewrite": { "^/api" : "" }
-        }
-    },
+    "/api": {
+      "target": "http://jsonplaceholder.typicode.com/",
+      "changeOrigin": true,
+      "pathRewrite": { "^/api" : "" }
+    }
+  },
   "env": {
     "development": {
       "extraBabelPlugins": [
         "dva-hmr",
         "transform-runtime",
-        ["import", { "libraryName": "antd", "style": "css" }]
+        ["import", { "libraryName": "antd", "style": true }]
       ]
     },
     "production": {
       "extraBabelPlugins": [
-        "transform-runtime"
+        "transform-runtime",
+        ["import", { "libraryName": "antd", "style": true }]
       ]
     }
+   },
+  "theme": {
+    "primary-color": "#81B6F5"
   }
 }
+
