--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-runtime": "^6.9.2",
     "dva": "^1.2.1",
     "dva-loading": "^0.2.1",
+    "echarts": "^3.7.0",
+    "echarts-for-react": "^1.4.4",
     "react": "^15.4.0",
     "react-dom": "^15.4.0"
   },
