--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "echarts": "^3.7.0",
     "echarts-for-react": "^1.4.4",
     "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.0",
+    "react-free-scrollbar": "^0.2.6"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
