--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^2.12.7",
     "babel-runtime": "^6.9.2",
+    "dom-to-image": "^2.6.0",
     "dva": "^1.2.1",
     "dva-loading": "^0.2.3",
     "echarts": "^3.7.0",
