--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dva-loading": "^0.2.3",
     "echarts": "^3.7.0",
     "echarts-for-react": "^1.4.4",
+    "file-saver": "^1.3.3",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-free-scrollbar": "^0.2.6"
